--- a/src/index.html
+++ b/src/index.html
@@ -962,8 +962,8 @@
         addToLive: "Add these matches to HT-Live",
       };
       tree.links = {
-        match: { htointegrated: "/htweb/Club/Matches/Match.aspx?matchID={0}&SourceSystem=HTOIntegrated" },
-        live: { htointegrated: "/htweb/Club/Matches/Live.aspx?matchID={0}&actionType=addMatch&SourceSystem=HTOIntegrated" }
+        match: "/htweb/Club/Matches/Match.aspx?matchID={0}&SourceSystem=HTOIntegrated",
+        live: "/htweb/Club/Matches/Live.aspx?matchID={0}&actionType=addMatch&SourceSystem=HTOIntegrated"
       };
 
       document.querySelector("#playoffsWrapper").appendChild(tree);
