--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,8 @@
   <script type="module" src="/build/hattrick-components.esm.js"></script>
   <script nomodule src="/build/hattrick-components.js"></script>
 
-  <script src="https://stage.hattrick.org/JavaScript/HT.TagReplacer.js" type="text/javascript"></script>
+  <link href="https://www.hattrick.org/v2118906/App_Themes/Standard_main_11.css" rel="stylesheet" type="text/css">
+  <script src="https://www.hattrick.org/JavaScript/HT.TagReplacer.js" type="text/javascript"></script>
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&amp;display=swap" rel="stylesheet">
 
@@ -18,9 +19,13 @@
       letter-spacing: 0.2px;
       line-height: 1.4em;
     }
+    body {
+      background: white;
+      padding: 10px;
+    }
 
-    h3 { cursor: pointer; }
-    h3:after { content: ' [\00b1]' }
+    section > h3 { cursor: pointer; }
+    section > h3:after { content: ' [\00b1]' }
 
     h3 + div[attributes], h3 + div[variables] { background-color: #ccc; padding: 1px 10px; }
     
@@ -192,6 +197,11 @@
       <code>--tooltip-delay: 0s</code>
     </div>
     
+  <h2>Player</h2>
+  <section player>
+    <hattrick-player player-id="420734612">This has a popup</hattrick-player>
+  </section>
+
     <h3 onclick="this.nextElementSibling.hidden = !this.nextElementSibling.hidden">Examples</h3>
     <div examples>
       <h4>Basic</h4>
