(arena): add arena with weather

--- a/src/index.html
+++ b/src/index.html
@@ -146,6 +146,15 @@
     <div id="playoffsWrapper" style="padding: 0 10px"></div>
   </section>
 
+  <h2>Arenas</h2>
+  <section arenas>
+    
+    <h3 onclick="this.nextElementSibling.hidden = !this.nextElementSibling.hidden">Examples</h3>
+    <div examples>
+      <hattrick-arena arena-id="15086" weather="1" arena-image-type="User220"></hattrick-arena>
+    </div>
+  </section>
+
   <h2>Tooltips</h2>
   <section tooltip>
     <p>
