--- a/src/index.html
+++ b/src/index.html
@@ -155,6 +155,8 @@
     <h3 onclick="this.nextElementSibling.hidden = !this.nextElementSibling.hidden">Examples</h3>
     <div examples>
       <hattrick-arena arena-id="15086" weather="1" arena-image-type="User220" capacity="50000"></hattrick-arena>
+      <hattrick-arena arena-id="15086" weather="1" arena-image-type="HalfView" capacity="50000"></hattrick-arena>
+      <hattrick-arena arena-id="15086" weather="1" arena-image-type="HalfViewFlipped" capacity="50000"></hattrick-arena>
       
       <hattrick-match-arena arena-id="15086" amount="0.5" capacity="50000"></hattrick-match-arena>
     </div>
