--- a/src/index.html
+++ b/src/index.html
@@ -157,6 +157,7 @@
       <hattrick-arena arena-id="15086" weather="1" arena-image-type="User220" capacity="50000"></hattrick-arena>
       <hattrick-arena arena-id="15086" weather="1" arena-image-type="HalfView" capacity="50000"></hattrick-arena>
       <hattrick-arena arena-id="15086" weather="1" arena-image-type="HalfViewFlipped" capacity="50000"></hattrick-arena>
+      <hattrick-arena arena-id="15086" weather="1" arena-image-type="PenaltyArea" capacity="50000"></hattrick-arena>
       
       <hattrick-match-arena arena-id="15086" amount="0.5" capacity="50000"></hattrick-match-arena>
     </div>
