--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,7 @@
   <script nomodule src="/build/hattrick-components.js"></script>
 
   <link href="https://www.hattrick.org/v2118906/App_Themes/Standard_main_11.css" rel="stylesheet" type="text/css">
+  <link href="https://www.hattrick.org/v2118906/Fonts/style.css" rel="stylesheet" type="text/css">
   <script src="https://www.hattrick.org/JavaScript/HT.TagReplacer.js" type="text/javascript"></script>
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&amp;display=swap" rel="stylesheet">
@@ -44,6 +45,14 @@
     /* hattrick-tooltip { font-size: 24px; } */
 
     hattrick-bar { margin-bottom: 2px; max-width: 250px; }
+
+    /* .transferPlayerSkills hattrick-bar { width: 130px !important; } */
+    hattrick-bar[max="8"] { width: 56px; }
+    hattrick-bar[max="9"] { width: 63px; }
+    hattrick-bar.verylow { --bar-level-background: #dd4140; }
+    hattrick-bar.low { --bar-level-background: #f5a104; --bar-level-color: #000; }
+    hattrick-bar.high { --bar-level-background: #f1c40a; --bar-level-color: #000; }
+    hattrick-bar.veryhigh { --bar-level-background: #59965d; }
 
     hattrick-progress-arc.verylow { --progress-arc-color: #DD4140; }
     hattrick-progress-arc.low { --progress-arc-color: #F5A104; }
@@ -154,6 +163,13 @@
     </div>
   </section>
 
+  <h2>Player</h2>
+  <section player>
+    <hattrick-player player-id="420734612">
+      Mouse over this player link to see details: <a href="#">(420734612)</a>
+    </hattrick-player>
+  </section>
+
   <h2>Arenas</h2>
   <section arenas>
     
@@ -197,11 +213,6 @@
       <code>--tooltip-delay: 0s</code>
     </div>
     
-  <h2>Player</h2>
-  <section player>
-    <hattrick-player player-id="420734612">This has a popup</hattrick-player>
-  </section>
-
     <h3 onclick="this.nextElementSibling.hidden = !this.nextElementSibling.hidden">Examples</h3>
     <div examples>
       <h4>Basic</h4>
