--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
 
   <link href="https://www.hattrick.org/v2118906/App_Themes/Standard_main_11.css" rel="stylesheet" type="text/css">
   <link href="https://www.hattrick.org/v2118906/Fonts/style.css" rel="stylesheet" type="text/css">
-  <script src="https://www.hattrick.org/JavaScript/HT.TagReplacer.js" type="text/javascript"></script>
+  <script src="https://laptop-marcus.hattrick.local/htweb/JavaScript/HT.TagReplacer.js" type="text/javascript"></script>
 
   <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&amp;display=swap" rel="stylesheet">
 
@@ -165,8 +165,19 @@
 
   <h2>Player</h2>
   <section player>
-    <hattrick-player player-id="420734612">
-      Mouse over this player link to see details: <a href="#">(420734612)</a>
+    Mouse over this player link to see details:
+    <hattrick-player player-id="420734612" language-id="1" country-id="1">
+      <a href="#">(420734612)</a>
+    </hattrick-player>
+    
+    Trainer:
+    <hattrick-player player-id="431238309" language-id="1" country-id="1">
+      <a href="#">(431238309)</a>
+    </hattrick-player>
+    
+    Transferlisted (update as needed):
+    <hattrick-player player-id="453023266" language-id="1" country-id="1">
+      <a href="#">(453023266)</a>
     </hattrick-player>
   </section>
 
