--- a/src/index.html
+++ b/src/index.html
@@ -166,17 +166,17 @@
   <h2>Player</h2>
   <section player>
     Mouse over this player link to see details:
-    <hattrick-player player-id="420734612" language-id="1" country-id="1" token="812DCB56-E49E-49ED-B213-D174BE7AF478">
+    <hattrick-player player-id="420734612" language-id="1" country-id="1" skill-presentation="2" token="812DCB56-E49E-49ED-B213-D174BE7AF478">
       <a href="#">(420734612)</a>
     </hattrick-player>
     
     Trainer:
-    <hattrick-player player-id="431238309" language-id="1" country-id="1" token="812DCB56-E49E-49ED-B213-D174BE7AF478">
+    <hattrick-player player-id="431238309" language-id="1" country-id="1" skill-presentation="2" hide-numbers-after-denominations="false" token="812DCB56-E49E-49ED-B213-D174BE7AF478">
       <a href="#">(431238309)</a>
     </hattrick-player>
     
     Transferlisted (update as needed):
-    <hattrick-player player-id="427925247" language-id="1" country-id="1" token="812DCB56-E49E-49ED-B213-D174BE7AF478">
+    <hattrick-player player-id="427925247" language-id="1" country-id="1" skill-presentation="2" token="812DCB56-E49E-49ED-B213-D174BE7AF478">
       <a href="#">(427925247)</a>
     </hattrick-player>
   </section>
