--- a/src/index.html
+++ b/src/index.html
@@ -782,8 +782,8 @@
   <section lazy style="min-height: 300px">
     <p>The rest of this section is lazy loaded.</p>
     <hattrick-picture src="https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png">
-      <source type="image/webp" media="(max-width: 479px)" srcset="https://malpha.hattrick.org/assets/imgs/start/hat-team-winners-sm.webp">
-      <source type="image/webp" media="(min-width: 480px)" srcset="https://malpha.hattrick.org/assets/imgs/start/hat-team-winners.webp">
+      <source type="image/webp" media="(max-width: 479px)" srcset="https://m.hattrick.org/assets/imgs/start/hat-team-winners-sm.webp">
+      <source type="image/webp" media="(min-width: 480px)" srcset="https://m.hattrick.org/assets/imgs/start/hat-team-winners.webp">
     </hattrick-picture>
   </section>
 
