reactions: almost there

--- a/src/index.html
+++ b/src/index.html
@@ -242,8 +242,7 @@
           reactions.firstReactionText = "Be the first to react";
           reactions.reactions = [
             { reactionTypeId: 1, amount: 8, userReacted: false },
-            { reactionTypeId: 2, amount: 56, userReacted: false },
-            { reactionTypeId: 3, amount: 1, userReacted: false },
+            { reactionTypeId: 2, amount: 56, userReacted: true },
             { reactionTypeId: 4, amount: 2, userReacted: false },
             { reactionTypeId: 5, amount: 15, userReacted: false },
           ];
