rating: handle undefined rating and/or stamina

--- a/src/index.html
+++ b/src/index.html
@@ -1140,6 +1140,7 @@
           rating="14.5"
           stamina="0.8"
         ></hattrick-rating>
+        <hattrick-rating size="large"></hattrick-rating>
         <br /><br />
         <div>Or: <code>size="small"</code> (same as size="29")*</div>
         <hattrick-rating
@@ -1166,6 +1167,7 @@
           stamina="0.8"
           stamina-label="Kondition"
         ></hattrick-rating>
+        <hattrick-rating size="small"></hattrick-rating>
         <br /><br />
         <div>
           Or you can define yourself <code>size="29"</code>. Note however how
