--- a/src/index.html
+++ b/src/index.html
@@ -141,7 +141,7 @@
       }
       hattrick-rating.small-rating {
         font-size: 8px;
-        --progress-arc-stroke-width: 3px;
+        --rating-stamina-stroke-width: 3px;
       }
 
       hattrick-timer,
@@ -1172,7 +1172,7 @@
         <div>
           Or you can define yourself <code>size="29"</code>. Note however how
           the second stamina bar and font doesn't adjust with manual sizes. You
-          have to manually set <code>font-size</code> and
+          have to manually set <code>font-size</code>,
           <code>--progress-arc-stroke-width</code>.
         </div>
         <hattrick-rating
