progress-arc: avoid negative dasharray for safari

--- a/src/index.html
+++ b/src/index.html
@@ -868,6 +868,8 @@
         <hattrick-progress-arc size="40" complete="0.3" class="verylow"></hattrick-progress-arc>
         <hattrick-progress-arc size="40" complete="0.2" class="verylow"></hattrick-progress-arc>
         <hattrick-progress-arc size="40" complete="0.1" class="verylow"></hattrick-progress-arc>
+        <hattrick-progress-arc size="40" complete="0" class="verylow"></hattrick-progress-arc>
+        <br />
         <br />
         <div class="add-fill-color">
           <hattrick-progress-arc size="40" complete="1.0" class="veryhigh"></hattrick-progress-arc>
@@ -880,6 +882,76 @@
           <hattrick-progress-arc size="40" complete="0.3" class="verylow"></hattrick-progress-arc>
           <hattrick-progress-arc size="40" complete="0.2" class="verylow"></hattrick-progress-arc>
           <hattrick-progress-arc size="40" complete="0.1" class="verylow"></hattrick-progress-arc>
+          <hattrick-progress-arc size="40" complete="0" class="verylow"></hattrick-progress-arc>
+        </div>
+        <br />
+        <div class="add-fill-color">
+          <hattrick-progress-arc
+            size="40"
+            circumference="270"
+            complete="1.0"
+            class="veryhigh"
+          ></hattrick-progress-arc>
+          <hattrick-progress-arc
+            size="40"
+            circumference="270"
+            complete="0.9"
+            class="veryhigh"
+          ></hattrick-progress-arc>
+          <hattrick-progress-arc
+            size="40"
+            circumference="270"
+            complete="0.8"
+            class="high"
+          ></hattrick-progress-arc>
+          <hattrick-progress-arc
+            size="40"
+            circumference="270"
+            complete="0.7"
+            class="high"
+          ></hattrick-progress-arc>
+          <hattrick-progress-arc
+            size="40"
+            circumference="270"
+            complete="0.6"
+            class="low"
+          ></hattrick-progress-arc>
+          <hattrick-progress-arc
+            size="40"
+            circumference="270"
+            complete="0.5"
+            class="low"
+          ></hattrick-progress-arc>
+          <hattrick-progress-arc
+            size="40"
+            circumference="270"
+            complete="0.4"
+            class="low"
+          ></hattrick-progress-arc>
+          <hattrick-progress-arc
+            size="40"
+            circumference="270"
+            complete="0.3"
+            class="verylow"
+          ></hattrick-progress-arc>
+          <hattrick-progress-arc
+            size="40"
+            circumference="270"
+            complete="0.2"
+            class="verylow"
+          ></hattrick-progress-arc>
+          <hattrick-progress-arc
+            size="40"
+            circumference="270"
+            complete="0.1"
+            class="verylow"
+          ></hattrick-progress-arc>
+          <hattrick-progress-arc
+            size="40"
+            circumference="270"
+            complete="0"
+            class="verylow"
+          ></hattrick-progress-arc>
         </div>
       </div>
     </section>
@@ -918,6 +990,12 @@
         <hattrick-rating size="large" rating="14" stamina="0.6"></hattrick-rating>
         <hattrick-rating size="large" rating="14.5" stamina="0.8"></hattrick-rating>
         <hattrick-rating size="large"></hattrick-rating>
+        <br />
+        <hattrick-rating size="large" rating="7" stamina="0.2" no-star></hattrick-rating>
+        <hattrick-rating size="large" rating="7.5" stamina="0.4" no-star></hattrick-rating>
+        <hattrick-rating size="large" rating="14" stamina="0.6" no-star></hattrick-rating>
+        <hattrick-rating size="large" rating="14.5" stamina="0.8" no-star></hattrick-rating>
+        <hattrick-rating size="large" no-star></hattrick-rating>
         <br /><br />
         <div>Or: <code>size="small"</code> (same as size="29")*</div>
         <hattrick-rating
@@ -945,6 +1023,36 @@
           stamina-label="Kondition"
         ></hattrick-rating>
         <hattrick-rating size="small"></hattrick-rating>
+        <br />
+        <hattrick-rating
+          size="small"
+          rating="7"
+          stamina="0.2"
+          stamina-label="Kondition"
+          no-star
+        ></hattrick-rating>
+        <hattrick-rating
+          size="small"
+          rating="7.5"
+          stamina="0.4"
+          stamina-label="Kondition"
+          no-star
+        ></hattrick-rating>
+        <hattrick-rating
+          size="small"
+          rating="14"
+          stamina="0.6"
+          stamina-label="Kondition"
+          no-star
+        ></hattrick-rating>
+        <hattrick-rating
+          size="small"
+          rating="14.5"
+          stamina="0.8"
+          stamina-label="Kondition"
+          no-star
+        ></hattrick-rating>
+        <hattrick-rating size="small" no-star></hattrick-rating>
         <br /><br />
         <div>
           Or you can define yourself <code>size="29"</code>. Note however how the second stamina bar
@@ -958,6 +1066,16 @@
           size="29"
           rating="14.5"
           stamina="0.8"
+        ></hattrick-rating>
+        <br />
+        <hattrick-rating size="44" rating="14.5" stamina="0.2" no-star></hattrick-rating>
+        <hattrick-rating size="29" rating="14.5" stamina="0.6" no-star></hattrick-rating>
+        <hattrick-rating
+          class="small-rating"
+          size="29"
+          rating="14.5"
+          stamina="0.8"
+          no-star
         ></hattrick-rating>
       </div>
     </section>
