progress-arc: handle angle + cleanup

--- a/src/index.html
+++ b/src/index.html
@@ -890,66 +890,77 @@
             size="40"
             circumference="270"
             complete="1.0"
+            angle="90"
             class="veryhigh"
           ></hattrick-progress-arc>
           <hattrick-progress-arc
             size="40"
             circumference="270"
             complete="0.9"
+            angle="90"
             class="veryhigh"
           ></hattrick-progress-arc>
           <hattrick-progress-arc
             size="40"
             circumference="270"
             complete="0.8"
+            angle="90"
             class="high"
           ></hattrick-progress-arc>
           <hattrick-progress-arc
             size="40"
             circumference="270"
             complete="0.7"
+            angle="90"
             class="high"
           ></hattrick-progress-arc>
           <hattrick-progress-arc
             size="40"
             circumference="270"
             complete="0.6"
+            angle="90"
             class="low"
           ></hattrick-progress-arc>
           <hattrick-progress-arc
             size="40"
             circumference="270"
             complete="0.5"
+            angle="90"
             class="low"
           ></hattrick-progress-arc>
           <hattrick-progress-arc
             size="40"
             circumference="270"
             complete="0.4"
+            angle="90"
             class="low"
           ></hattrick-progress-arc>
           <hattrick-progress-arc
             size="40"
             circumference="270"
             complete="0.3"
+            angle="90"
             class="verylow"
           ></hattrick-progress-arc>
           <hattrick-progress-arc
             size="40"
             circumference="270"
             complete="0.2"
+            angle="90"
             class="verylow"
           ></hattrick-progress-arc>
           <hattrick-progress-arc
             size="40"
             circumference="270"
             complete="0.1"
+            angle="90"
             class="verylow"
           ></hattrick-progress-arc>
           <hattrick-progress-arc
             size="40"
             circumference="270"
             complete="0"
+            angle="90"
             class="verylow"
           ></hattrick-progress-arc>
         </div>
